# BotTarolog

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
tarolog/: main.py  metrics.py  settings.py  texts.py
